# sample_adapter

./: .coverage  .coveragerc  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
.github/workflows/: build.yaml  ci.yaml  ci_adapter.yaml  publish-docker.yaml  test.yaml
app/: main.py
sample_adapter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_adapter.py
