# pyproject.toml
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sample_adapter"
version = "0.1.0"
description = "A minimal sample adapter demonstrating the Haraka Adapter SDK integration."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.com" }
]
dependencies = [
    "haraka-runtime",  # The Haraka Runtime SDK package
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Documentation" = "https://github.com/your-org/haraka-adapter/blob/main/docs/sdk_integration.md"
"Source" = "https://github.com/your-org/haraka-adapter"
